<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:alpha="0.7"
    android:background="@drawable/fondo_invierno"
    tools:context="com.example.mario.mrfox.LogInActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textSize="26sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:fontFamily="casual"/>

    <TextView
        android:id="@+id/tvsubTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitulo"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:text="@string/subTitulo"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:fontFamily="casual"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tvsubTitulo"
        android:background="@android:color/white"
        android:alpha="0.7"
        android:padding="10dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="64dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNombre"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/light_grey"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPassword"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/light_grey"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/BTN" />

</RelativeLayout>
